# apache-airflow-microsoft-fabric-plugin-sp

./: pyproject.toml
src/apache_airflow_microsoft_fabric_plugin.egg-info/: PKG-INFO
src/apache_airflow_microsoft_fabric_plugin/hooks/: fabric.py
src/apache_airflow_microsoft_fabric_plugin/operators/: fabric.py
src/apache_airflow_microsoft_fabric_plugin_sp.egg-info/: PKG-INFO  SOURCES.txt
tests/hooks/: fabric.py
