[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apache_airflow_microsoft_fabric_plugin"
version = "1.0.3"
authors = [
  { name="Peter Honved", email="honved.peti2002@gmail.com" },
]
description = "A plugin for Apache Airflow to interact with Microsoft Fabric items"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/peterz0ne/apache-airflow-microsoft-fabric-plugin-sp.git"